# gnome-network-displays

./: NEWS  README  README.md  meson.build  meson_options.txt
build-aux/flatpak/: org.gnome.NetworkDisplays.json
data/: meson.build  org.gnome.NetworkDisplays.appdata.xml.in  org.gnome.NetworkDisplays.desktop.in  org.gnome.NetworkDisplays.gschema.xml  org.gnome.Screencast.appdata.xml.in  org.gnome.Screencast.desktop.in  org.gnome.Screencast.gschema.xml
data/icons/: meson.build
po/: LINGUAS  POTFILES  POTFILES.in  de.po  gnome-network-displays.pot  it.po  meson.build  pt_BR.po  tr.po
scripts/: uncrustify.cfg  uncrustify.sh
src/: gnome-network-displays.gresource.xml  gnome-screencast-window.c  gnome-screencast-window.h  gnome-screencast-window.ui  gnome-screencast.gresource.xml  main.c  meson.build  nd-codec-install.c  nd-codec-install.h  nd-dummy-provider.c  nd-dummy-provider.h  nd-dummy-wfd-sink.c  nd-dummy-wfd-sink.h  nd-meta-provider.c  nd-meta-provider.h  nd-meta-sink.c  nd-meta-sink.h  nd-provider.c  nd-provider.h  nd-pulseaudio.c  nd-pulseaudio.h  nd-screencast-portal.c  nd-screencast-portal.h  nd-sink-list.c  nd-sink-list.h  nd-sink-row.c  nd-sink-row.h  nd-sink-row.ui  nd-sink.c  nd-sink.h  nd-wfd-p2p-provider.c  nd-wfd-p2p-provider.h  nd-wfd-p2p-registry.c  nd-wfd-p2p-registry.h  nd-wfd-p2p-sink.c  nd-wfd-p2p-sink.h  nd-window.c  nd-window.h  nd-window.ui  screencast-dummy-provider.c  (+26 more)
src/wfd/: meson.build  wfd-audio-codec.c  wfd-audio-codec.h  wfd-auth.c  wfd-auth.h  wfd-client.c  wfd-client.h  wfd-media-factory.c  wfd-media-factory.h  wfd-media.c  wfd-media.h  wfd-params.c  wfd-params.h  wfd-resolution.c  wfd-resolution.h  wfd-server.c  wfd-server.h  wfd-session-pool.c  wfd-session-pool.h  wfd-video-codec.c  wfd-video-codec.h
